@@ -194,7 +194,6 @@ Global
 		{EC393863-333E-49CE-94A6-654B9F323954}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{EC393863-333E-49CE-94A6-654B9F323954}.Release|Any CPU.Build.0 = Release|Any CPU
 		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{844F5EC4-9224-42A9-986D-CE645AC970F2}.Release|Any CPU.Build.0 = Release|Any CPU
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
@@ -210,11 +209,9 @@ Global
 		{ECCA4D19-65D7-4EED-B8EC-56AF79F41E69}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{ECCA4D19-65D7-4EED-B8EC-56AF79F41E69}.Release|Any CPU.Build.0 = Release|Any CPU
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{7FB1D2DC-5CA8-410C-9B9A-3DE517B3BE3A}.Release|Any CPU.Build.0 = Release|Any CPU
 		{824EC872-2992-4518-8C41-4F87640D752A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{824EC872-2992-4518-8C41-4F87640D752A}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{824EC872-2992-4518-8C41-4F87640D752A}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{824EC872-2992-4518-8C41-4F87640D752A}.Release|Any CPU.Build.0 = Release|Any CPU
 		{22432F75-FD21-474A-AB8F-43100DE79FDB}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
@@ -227,6 +224,7 @@ Global
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{DDE1A9F0-4CD6-454E-A9DB-B56946F34ED5}.Release|Any CPU.Build.0 = Release|Any CPU
 		{2409063E-BE05-4596-A677-758096D1C759}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{2409063E-BE05-4596-A677-758096D1C759}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{2409063E-BE05-4596-A677-758096D1C759}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{2409063E-BE05-4596-A677-758096D1C759}.Release|Any CPU.Build.0 = Release|Any CPU
 		{98F19522-C9B8-400D-8A12-DABB3DA9411D}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
